--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
       </p>
     </footer>
 
+    <!-- MODAL BOX -->
     <div class="modal hidden">
       <button class="btn--close-modal">&times;</button>
       <h2 class="modal__header">
